Use % margins on scrolly-columns to avoid overflow

--- a/src/css/story/scrolly-columns.styl
+++ b/src/css/story/scrolly-columns.styl
@@ -5,7 +5,7 @@
         width 60%
         position absolute
         top 0
-        margin-left 30rem
+        margin-left 40%
         transform translate3d(0, 0, 0)
         // TODO: apparently a bad idea on mobile?
         height 90vh
